refactor: encapsulation of Graph and Node classes
- Changed getAdjacencyList() in Graph to return an unmodifiable list.
- Modified Node class to include parent-child relationships and updated methods to reflect this.
- Updated unit tests to ensure unmodifiable behavior of neighbor lists.